Updates from Jupyter notebooks

--- a/05_Intro-train-models.ipynb
+++ b/05_Intro-train-models.ipynb
@@ -2727,6 +2727,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "277b4d25-434f-49dd-b757-75ccc13366ea",
+   "metadata": {},
+   "source": [
+    "#### GPUs can be slow for small datasets/models\n",
+    "> This performance discrepancy might be due to the following factors:\n",
+    "> \n",
+    "> 1. **Small Dataset/Model Size**: When datasets and models are small, the overhead of transferring data between the CPU and GPU, as well as managing the GPU, can actually slow things down. For very small models and datasets, CPUs are often faster since there's minimal data to process.\n",
+    "> \n",
+    "> 2. **GPU Initialization Overhead**: Every time a training job starts on a GPU, there’s a small overhead for initializing CUDA libraries. For short jobs, this setup time can make the GPU appear slower overall.\n",
+    "> \n",
+    "> 3. **Batch Size**: GPUs perform best with larger batch sizes since they can process many data points in parallel. If the batch size is too small, the GPU is underutilized, leading to suboptimal performance. You may want to try increasing the batch size to see if this reduces training time.\n",
+    "> \n",
+    "> 4. **Instance Type**: Some GPU instances, like the `ml.g4dn` series, have less computational power than the larger `p3` series. They’re better suited for inference or lightweight tasks rather than intense training, so a more powerful instance (e.g., `ml.p3.2xlarge`) could help for larger tasks.\n",
+    "> \n",
+    "> If training time continues to be critical, sticking with a CPU instance may be the best approach for smaller datasets. For larger, more complex models and datasets, the GPU's advantages should become more apparent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f151dcbf-a8fc-4ef8-bd3b-e291a803ea28",
    "metadata": {},
    "source": [
