--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2789,7 +2789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a80ca60f-5e62-45e3-bfbb-9b62712688e4",
    "metadata": {
     "tags": []
@@ -2799,20 +2799,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d6b124c] Updates from Jupyter notebooks\n",
-      " 2 files changed, 1810 insertions(+), 864 deletions(-)\n",
+      "[main bf003ce] Updates from Jupyter notebooks\n",
+      " 3 files changed, 3882 insertions(+), 1782 deletions(-)\n",
       "From https://github.com/UW-Madison-DataScience/test_AWS\n",
       " * branch            main       -> FETCH_HEAD\n",
+      "   8102f2c..d6b124c  main       -> origin/main\n",
       "Already up to date.\n",
-      "Enumerating objects: 18, done.\n",
-      "Counting objects: 100% (18/18), done.\n",
+      "Enumerating objects: 11, done.\n",
+      "Counting objects: 100% (11/11), done.\n",
       "Delta compression using up to 2 threads\n",
-      "Compressing objects: 100% (12/12), done.\n",
-      "Writing objects: 100% (12/12), 24.20 KiB | 1.51 MiB/s, done.\n",
-      "Total 12 (delta 7), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 4 local objects.\u001b[K\n",
+      "Compressing objects: 100% (6/6), done.\n",
+      "Writing objects: 100% (6/6), 29.53 KiB | 1.48 MiB/s, done.\n",
+      "Total 6 (delta 4), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (4/4), completed with 4 local objects.\u001b[K\n",
       "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   8102f2c..d6b124c  main -> main\n"
+      "   d6b124c..bf003ce  main -> main\n"
      ]
     }
    ],
