Updates from Jupyter notebooks

--- a/05_Intro-train-models.ipynb
+++ b/05_Intro-train-models.ipynb
@@ -259,6 +259,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02ffeda5-a942-415c-ad74-a0deff0e7900",
+   "metadata": {},
+   "source": [
+    "You can also use the `get_notebook_instance_info()` function found in `AWS_helpers.py` to retrive this info."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "adafa93a-17d0-4dc5-9656-a8c9eeb65010",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Status': 'InService', 'InstanceType': 'ml.t3.medium'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from test_AWS.scripts.AWS_helpers import get_notebook_instance_info\n",
+    "get_notebook_instance_info(notebook_instance_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2836a68d-9188-4408-bdf3-fa217a525e87",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "update_repo() missing 1 required positional argument: 'repo_url'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtest_AWS\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscripts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mAWS_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m update_repo\n\u001b[0;32m----> 2\u001b[0m \u001b[43mupdate_repo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: update_repo() missing 1 required positional argument: 'repo_url'"
+     ]
+    }
+   ],
+   "source": [
+    "from test_AWS.scripts.AWS_helpers import update_repo\n",
+    "update_repo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "decb7ac7-1dff-429e-9cc1-f82a82874ef5",
    "metadata": {},
    "source": [
