--- a/05_Intro-train-models.ipynb
+++ b/05_Intro-train-models.ipynb
@@ -291,27 +291,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "2836a68d-9188-4408-bdf3-fa217a525e87",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from test_AWS.scripts.AWS_helpers import update_repo\n",
+    "update_repo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bcf9702c-d763-45e5-aa15-780bb16a6b95",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "update_repo() missing 1 required positional argument: 'repo_url'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtest_AWS\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscripts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mAWS_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m update_repo\n\u001b[0;32m----> 2\u001b[0m \u001b[43mupdate_repo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: update_repo() missing 1 required positional argument: 'repo_url'"
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "GitHub Username:  qualiaMachine\n",
+      "GitHub Personal Access Token (PAT):  ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main c0ce483] Updates from Jupyter notebooks\n",
+      " 4 files changed, 4156 insertions(+), 189 deletions(-)\n",
+      " create mode 100644 scripts/__pycache__/AWS_helpers.cpython-310.pyc\n",
+      "Already up to date.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "   4a3af22..e973358  main       -> origin/main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repository updated successfully.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
+      "   e973358..c0ce483  main -> main\n"
      ]
     }
    ],
    "source": [
-    "from test_AWS.scripts.AWS_helpers import update_repo\n",
-    "update_repo()"
+    "import importlib\n",
+    "import test_AWS.scripts.AWS_helpers as helpers\n",
+    "importlib.reload(helpers)\n",
+    "\n",
+    "helpers.update_repo()"
    ]
   },
   {
