Updates from Jupyter notebooks

--- a/05_Intro-train-models.ipynb
+++ b/05_Intro-train-models.ipynb
@@ -7,12 +7,15 @@
    "source": [
     "## Initialize SageMaker environment\n",
     "\n",
-    "This code initializes the AWS SageMaker environment by defining the SageMaker role, session, and S3 client. It also specifies the S3 bucket and key for accessing the Titanic training dataset stored in an S3 bucket."
+    "This code initializes the AWS SageMaker environment by defining the SageMaker role, session, and S3 client. It also specifies the S3 bucket and key for accessing the Titanic training dataset stored in an S3 bucket.\n",
+    "\n",
+    "#### Boto3 API\n",
+    "> Boto3 is the official AWS SDK for Python, allowing developers to interact programmatically with AWS services like S3, EC2, and Lambda. It provides both high-level and low-level APIs, making it easy to manage AWS resources and automate tasks. With built-in support for paginators, waiters, and session management, Boto3 simplifies working with AWS credentials, regions, and IAM permissions. It’s ideal for automating cloud operations and integrating AWS services into Python applications."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "054fc92d-acab-40c5-88cc-f590e322f053",
    "metadata": {
     "tags": []
@@ -22,8 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ec2-user/.config/sagemaker/config.yaml\n"
+      "role = arn:aws:iam::183295408236:role/ml-sagemaker-use\n"
      ]
     }
    ],
@@ -33,13 +35,17 @@
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
     "\n",
-    "# Initialize the SageMaker role and session\n",
-    "# Define the SageMaker role and session\n",
+    "# Initialize the SageMaker role (will reflect notebook instance's policy)\n",
     "role = sagemaker.get_execution_role()\n",
+    "print(f'role = {role}')\n",
+    "\n",
+    "# Create a SageMaker session to manage interactions with Amazon SageMaker, such as training jobs, model deployments, and data input/output.\n",
     "session = sagemaker.Session()\n",
+    "\n",
+    "# Initialize an S3 client to interact with Amazon S3, allowing operations like uploading, downloading, and managing objects and buckets.\n",
     "s3 = boto3.client('s3')\n",
     "\n",
-    "# Define the S3 bucket \n",
+    "# Define the S3 bucket that we will load from\n",
     "bucket = 'titanic-dataset-test'  # replace with your S3 bucket name\n",
     "\n",
     "# Define train/test filenames\n",
@@ -63,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "44edeebe-6af2-411d-a389-2b50fa648cd5",
    "metadata": {
     "tags": []
@@ -82,8 +88,7 @@
     "file_key = f\"data/{train_filename}\"  # Path to your file in the S3 bucket\n",
     "local_file_path = f\"./{train_filename}\"  # Local path to save the file\n",
     "\n",
-    "# Initialize the S3 client and download the file\n",
-    "s3 = boto3.client(\"s3\")\n",
+    "# Download the file using the s3 client variable we initialized earlier\n",
     "s3.download_file(bucket, file_key, local_file_path)\n",
     "print(\"File downloaded:\", local_file_path)"
    ]
@@ -98,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "253f4930-ca36-49ea-a2eb-fbb29826a394",
    "metadata": {
     "tags": []
@@ -118,7 +123,6 @@
     "local_file_path = f\"./{test_filename}\"  # Local path to save the file\n",
     "\n",
     "# Initialize the S3 client and download the file\n",
-    "s3 = boto3.client(\"s3\")\n",
     "s3.download_file(bucket, file_key, local_file_path)\n",
     "print(\"File downloaded:\", local_file_path)\n"
    ]
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "cdb1e5e9-fdaf-4aea-bf1f-c562923328f5",
    "metadata": {
     "tags": []
@@ -152,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/ec2-user/SageMaker/test_AWS\n"
+      "/home/ec2-user/SageMaker\n"
      ]
     }
    ],
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "d4c0118b-a9ad-418a-9353-f7d61e0d401e",
    "metadata": {
     "tags": []
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "f0e0a5c3-aaf3-4662-81bf-f385f3328b94",
    "metadata": {
     "tags": []
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "600eae82-5122-4eeb-9f0f-2752e8623a48",
    "metadata": {
     "tags": []
@@ -245,7 +249,6 @@
     "notebook_instance_name = 'Titanic-ML-Notebook' \n",
     "\n",
     "# Initialize SageMaker client\n",
-    "import boto3\n",
     "sagemaker_client = boto3.client('sagemaker')\n",
     "\n",
     "# Describe the notebook instance\n",
@@ -262,12 +265,13 @@
    "id": "02ffeda5-a942-415c-ad74-a0deff0e7900",
    "metadata": {},
    "source": [
+    "#### Helper:  `get_notebook_instance_info()` \n",
     "You can also use the `get_notebook_instance_info()` function found in `AWS_helpers.py` to retrive this info."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "adafa93a-17d0-4dc5-9656-a8c9eeb65010",
    "metadata": {
     "tags": []
@@ -279,7 +283,7 @@
        "{'Status': 'InService', 'InstanceType': 'ml.t3.medium'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,74 +295,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2836a68d-9188-4408-bdf3-fa217a525e87",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from test_AWS.scripts.AWS_helpers import update_repo\n",
-    "update_repo()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "bcf9702c-d763-45e5-aa15-780bb16a6b95",
+   "execution_count": 43,
+   "id": "4150b7ff-0127-4017-b439-42f973085223",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "GitHub Username:  qualiaMachine\n",
-      "GitHub Personal Access Token (PAT):  ········\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[main c0ce483] Updates from Jupyter notebooks\n",
-      " 4 files changed, 4156 insertions(+), 189 deletions(-)\n",
-      " create mode 100644 scripts/__pycache__/AWS_helpers.cpython-310.pyc\n",
-      "Already up to date.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
-      " * branch            main       -> FETCH_HEAD\n",
-      "   4a3af22..e973358  main       -> origin/main\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Repository updated successfully.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
-      "   e973358..c0ce483  main -> main\n"
+     "ename": "ClientError",
+     "evalue": "An error occurred (AccessDeniedException) when calling the GetCostAndUsage operation: User: arn:aws:sts::183295408236:assumed-role/ml-sagemaker-use/SageMaker is not authorized to perform: ce:GetCostAndUsage on resource: arn:aws:ce:us-east-1:183295408236:/GetCostAndUsage because no identity-based policy allows the ce:GetCostAndUsage action",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[43], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtest_AWS\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mscripts\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mAWS_helpers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_current_costs\n\u001b[0;32m----> 3\u001b[0m \u001b[43mget_current_costs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdays\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/SageMaker/test_AWS/scripts/AWS_helpers.py:62\u001b[0m, in \u001b[0;36mget_current_costs\u001b[0;34m(days)\u001b[0m\n\u001b[1;32m     60\u001b[0m end \u001b[38;5;241m=\u001b[39m datetime\u001b[38;5;241m.\u001b[39mutcnow()\u001b[38;5;241m.\u001b[39mdate()\n\u001b[1;32m     61\u001b[0m start \u001b[38;5;241m=\u001b[39m end \u001b[38;5;241m-\u001b[39m timedelta(days\u001b[38;5;241m=\u001b[39mdays)\n\u001b[0;32m---> 62\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_cost_and_usage\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     63\u001b[0m \u001b[43m    \u001b[49m\u001b[43mTimePeriod\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mStart\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrftime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mY-\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mm-\u001b[39;49m\u001b[38;5;132;43;01m%d\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mEnd\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrftime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mY-\u001b[39;49m\u001b[38;5;124;43m%\u001b[39;49m\u001b[38;5;124;43mm-\u001b[39;49m\u001b[38;5;132;43;01m%d\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m}\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     64\u001b[0m \u001b[43m    \u001b[49m\u001b[43mGranularity\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDAILY\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     65\u001b[0m \u001b[43m    \u001b[49m\u001b[43mMetrics\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mUnblendedCost\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     66\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     67\u001b[0m total_cost \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(\u001b[38;5;28mfloat\u001b[39m(day[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnblendedCost\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAmount\u001b[39m\u001b[38;5;124m'\u001b[39m]) \u001b[38;5;28;01mfor\u001b[39;00m day \u001b[38;5;129;01min\u001b[39;00m response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResultsByTime\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total_cost\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:569\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    565\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    566\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    567\u001b[0m     )\n\u001b[1;32m    568\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 569\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/pytorch_p310/lib/python3.10/site-packages/botocore/client.py:1023\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1019\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1020\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1021\u001b[0m     )\n\u001b[1;32m   1022\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1023\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1024\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1025\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
+      "\u001b[0;31mClientError\u001b[0m: An error occurred (AccessDeniedException) when calling the GetCostAndUsage operation: User: arn:aws:sts::183295408236:assumed-role/ml-sagemaker-use/SageMaker is not authorized to perform: ce:GetCostAndUsage on resource: arn:aws:ce:us-east-1:183295408236:/GetCostAndUsage because no identity-based policy allows the ce:GetCostAndUsage action"
      ]
     }
    ],
    "source": [
-    "import importlib\n",
-    "import test_AWS.scripts.AWS_helpers as helpers\n",
-    "importlib.reload(helpers)\n",
+    "from test_AWS.scripts.AWS_helpers import get_current_costs\n",
     "\n",
-    "helpers.update_repo()"
+    "get_current_costs(days=1)"
    ]
   },
   {
@@ -371,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "d0dfc29a-e095-464e-b173-c61c51f33f5f",
    "metadata": {
     "tags": []
@@ -413,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "666a5d25-4542-4c77-9280-bff280d0306c",
    "metadata": {
     "tags": []
@@ -425,7 +386,7 @@
      "text": [
       "Training time: 0.05 seconds\n",
       "Model saved to ./xgboost-model\n",
-      "Local training time: 0.08 seconds, instance_type = ml.t3.medium\n"
+      "Local training time: 0.09 seconds, instance_type = ml.t3.medium\n"
      ]
     }
    ],
@@ -440,6 +401,14 @@
     "# Measure and print the time taken\n",
     "print(f\"Local training time: {t.time() - start_time:.2f} seconds, instance_type = {local_instance}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c40fe899-390e-43ce-9389-0ebd44f2e27b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
