--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d864bcdd-9bdd-4eb7-ac55-09059a10c4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test_AWS.scripts.AWS_helpers import update_repo\n",
+    "update_repo()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "e3af79ae-4e7a-4353-b7e9-3717b51ee467",
    "metadata": {
