Updates from Jupyter notebooks

--- a/update-repo.ipynb
+++ b/update-repo.ipynb
@@ -2,10 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d864bcdd-9bdd-4eb7-ac55-09059a10c4e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "GitHub Username:  qualiaMachine\n",
+      "GitHub Personal Access Token (PAT):  ········\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 1602325] Updates from Jupyter notebooks\n",
+      " 2 files changed, 61 insertions(+), 81 deletions(-)\n",
+      "Already up to date.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "From https://github.com/UW-Madison-DataScience/test_AWS\n",
+      " * branch            main       -> FETCH_HEAD\n",
+      "   c0ce483..917d040  main       -> origin/main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repository updated successfully.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/UW-Madison-DataScience/test_AWS.git\n",
+      "   917d040..1602325  main -> main\n"
+     ]
+    }
+   ],
    "source": [
     "from test_AWS.scripts.AWS_helpers import update_repo\n",
     "update_repo()"
